<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_transaction">Transaction</string>
    <string name="unable_to_add_transaction">Unable to add transaction</string>
    <string name="unable_to_delete_transaction">Unable to delete transaction</string>
    <string name="unable_to_find_transaction">Unable to find transaction</string>
    <string name="transaction_delete_error_message">Unable to delete this transaction</string>
    <string name="unable_to_load_transaction">Unable to load transaction</string>

    <string name="no_transactions_available">No transactions available</string>

    <string name="this_month">This month</string>
    <string name="date">Date</string>
    <string name="notes">Notes</string>
    <string name="search_hint">Search</string>
    <string name="clear_text">Clear search content</string>
    <string name="voice_search">Voice search</string>
    <string name="speech_prompt">Search your transaction</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="divide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="minus">-</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="amount">Amount</string>
    <string name="title_history">History</string>

    <string name="no_history_available">No history</string>
    <string name="transaction_action_text">Tap + button to add a new transaction,\nOr change time period.</string>
    <string name="search">Search</string>
    <string name="not_assigned">Not assigned</string>
    <string name="transaction">Transaction</string>

</resources>